# PGMfiltering

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: PGMImage.hpp  filter.hpp
src/: PGMImage.cpp  filter.cpp
